--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/fingerprint": "~0.13.4",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.16",
@@ -30,19 +31,19 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "expo": "^53.0.0",
-    "expo-blur": "^14.1.5",
-    "expo-camera": "^16.1.9",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
     "expo-checkbox": "~4.1.4",
-    "expo-constants": "~17.1.6",
-    "expo-image": "~2.3.0",
+    "expo-constants": "~17.1.7",
+    "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
-    "expo-linking": "~7.1.5",
-    "expo-location": "~18.1.5",
-    "expo-router": "~5.1.0",
-    "expo-splash-screen": "~0.30.9",
+    "expo-linking": "~7.1.7",
+    "expo-location": "~18.1.6",
+    "expo-router": "~5.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.9",
-    "expo-updates": "~0.28.15",
+    "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
     "js-base64": "^3.7.7",
     "lodash": "^4.17.21",
     "nativewind": "^4.1.23",
@@ -50,7 +51,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.58.1",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
